// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`known enemy comps — top-5 counter snapshots > Circuit Royal + double-sniper enemy 1`] = `
[
  [
    "doomfist",
    "sombra",
    "tracer",
    "jetpack-cat",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "illari",
    "kiriko",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "jetpack-cat",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > dive enemy with bans (Zarya + Brigitte banned) 1`] = `
[
  [
    "winston",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
  [
    "roadhog",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
  [
    "winston",
    "cassidy",
    "mei",
    "lucio",
    "moira",
  ],
  [
    "winston",
    "cassidy",
    "reaper",
    "mizuki",
    "moira",
  ],
  [
    "sigma",
    "cassidy",
    "mei",
    "mizuki",
    "moira",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > mixed dive+poke enemy 1`] = `
[
  [
    "winston",
    "sombra",
    "tracer",
    "kiriko",
    "moira",
  ],
  [
    "winston",
    "reaper",
    "sombra",
    "kiriko",
    "moira",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "kiriko",
    "mizuki",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "kiriko",
    "mizuki",
  ],
  [
    "winston",
    "reaper",
    "sombra",
    "brigitte",
    "moira",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure brawl enemy 1`] = `
[
  [
    "sigma",
    "bastion",
    "pharah",
    "baptiste",
    "lucio",
  ],
  [
    "sigma",
    "bastion",
    "pharah",
    "baptiste",
    "wuyang",
  ],
  [
    "sigma",
    "pharah",
    "widowmaker",
    "baptiste",
    "lucio",
  ],
  [
    "sigma",
    "bastion",
    "pharah",
    "baptiste",
    "mercy",
  ],
  [
    "sigma",
    "bastion",
    "pharah",
    "baptiste",
    "jetpack-cat",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure dive enemy 1`] = `
[
  [
    "zarya",
    "cassidy",
    "reaper",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "cassidy",
    "mei",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "mei",
    "reaper",
    "brigitte",
    "moira",
  ],
  [
    "zarya",
    "cassidy",
    "mei",
    "brigitte",
    "mizuki",
  ],
  [
    "roadhog",
    "cassidy",
    "mei",
    "brigitte",
    "moira",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > pure poke enemy 1`] = `
[
  [
    "winston",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "ana",
    "kiriko",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "juno",
    "kiriko",
  ],
  [
    "winston",
    "sombra",
    "tracer",
    "kiriko",
    "lucio",
  ],
  [
    "doomfist",
    "sombra",
    "tracer",
    "kiriko",
    "mercy",
  ],
]
`;

exports[`known enemy comps — top-5 counter snapshots > tank-busting enemy (Mauga + Reaper) 1`] = `
[
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "illari",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "kiriko",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "moira",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "juno",
  ],
  [
    "sigma",
    "ashe",
    "widowmaker",
    "baptiste",
    "mercy",
  ],
]
`;
